# ukbutils

./: LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: testing.yml
src/ukbutils/: UKB_data_dict.py  get_template.py  get_translation_dict.py  ukb_config_based_converter.py  ukb_tsv_to_parquet.py  utils.py
src/ukbutils/data/: TEMPLATE_config.yaml
src/ukbutils/templates/: TEMPLATE_config.yaml
tests/: test_UKB_data_dict.py  test_get_template.py  test_get_translation_dict.py  test_utils.py
tests/test_data/: data_dict_test.html  expected_encoding_table_19-0.0.csv  expected_encoding_table_21.csv  mock_program.py  test_columns.csv
ukb_utils/: UKB_data_dict.py  convert_tsv_to_parquet.py  convert_type.py  create_parquet_from_config.py
