[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ukbutils"
version = "0.0.1"
description = 'Functions and CLI tools for working with UK Biobank main dataset'
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["UK Biobank", "parquet", "file conversion"]
authors = [
  { name = "Naomi Hindriks", email = "n.j.hindriks@gmail.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    'pandas>=2.2.0',
    'beautifulsoup4>=4.12.0',
    'pyyaml>=6.0.0',
    'dask>=2024.1.1',
    'lxml>=5.0.0',
    "pyarrow>=15.0.0",
    "numpy>=1.26.0"
]

[project.scripts]
ukb-parquet-from-config = "ukbutils.ukb_config_based_converter:main_cli"
ukb-to-parquet = "ukbutils.ukb_tsv_to_parquet:main_cli"

[project.urls]
Homepage = "https://github.com/naomihindriks/ukbutils"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "tox>=3.27.1, <4",
    "tox-conda>=0.10.2",
    "flake8>=7.0.0",
    "black>=24.1.1",
    "flake8-black>=0.3.6"
    # "tox-gh-actions"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88
